--- a/index.html
+++ b/index.html
@@ -16,13 +16,31 @@
   
   <header class="top-bar">
 
-    <img src="assets/icons/logo-mini.png">
+    <div class="tob-bar__items">
+      <img src="assets/icons/logo-mini.png">
+  
+      <div class="quick-access-toolbar">
+        <button class="button">
+          <img src="assets/icons/save-file.png">
+        </button>
+        <button class="button">
+          <img src="assets/icons/go-back-disabled.png">
+        </button>
+        <button class="button">
+          <img src="assets/icons/go-forward-disabled.png">
+        </button>
+        <button class="button">
+          <img src="assets/icons/arrow-dropdown.png">
+        </button>
+      </div>
 
-    <div class="quick-access-toolbar">
-      <img src="assets/icons/save-file.png">
-      <img src="assets/icons/go-back-disabled.png">
-      <img src="assets/icons/go-forward-disabled.png">
-      <img src="assets/icons/arrow-dropdown.png">
+      <h1>Untitled - Paint</h1>
+    </div>
+
+    <div class="top-bar__controls">
+      <button>-</button>
+      <button>O</button>
+      <button>X</button>
     </div>
     
   </header>
